--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,6 +2,14 @@
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   tools:context=".MainActivity">
+
+  <item
+    android:id="@+id/action_details"
+    android:icon="@android:drawable/ic_dialog_alert"
+    android:orderInCategory="100"
+    android:title="@string/action_details"
+    app:showAsAction="always" />
+
   <item
     android:id="@+id/action_info"
     android:icon="@drawable/ic_info_outline_white_24dp"
